[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keepr"
version = "1.1.0"
description = "Database & file backup manager with SSH and S3 support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "odbs" }]

dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
]

[project.scripts]
keepr = "keepr.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["keepr"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
